--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 
     //Coil image download
-    implementation 'io.coil-kt:coil:1.4.0'
+    implementation 'io.coil-kt:coil:1.3.2'
+    implementation("io.coil-kt:coil-svg:1.3.2")
+    implementation("io.coil-kt:coil-gif:1.3.2")
 
     //Test
     testImplementation 'junit:junit:4.13.2'
